Try to fix footer link color on iPhone/iPad

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -31,6 +31,7 @@ span.language-button-text {
 
 .awesome-button {
     background: none;
+    color: var(--dark);
     margin: -5px; 
     border: none;
     border-radius: 5px;
